<resources>
    <string name="app_name">SignInIntroduce</string>
    <string name="toast_enter_id">아이디를 입력해야 합니다.</string>
    <string name="toast_enter_password">비밀번호를 입력해야 합니다.</string>
    <string name="toast_login_successed">로그인 성공</string>
    <string name="home_id_format">아이디: %1$s</string>
    <string name="home_name_format">이름: %1$s</string>
    <string name="home_age_format">나이: %1$s</string>
    <string name="home_mbti_format">MBTI: %1$s</string>
    <string name="toast_input_notyet">입력되지 않은 정보가 있습니다.</string>
    <string name="signup_warn_enter_email">이메일을 입력해주세요.</string>
    <string name="signup_warn_enter_email_format">이메일%1$s을 입력해주세요.</string>
    <string name="signup_warn_and_domain">과 도메인</string>
    <string name="signup_warn_enter_domain">도메인을 입력해주세요.</string>
    <string name="chall_warn_forbidden_input">입력할 수 없는 문자입니다.</string>
    <string name="chall_warn_enter_name">이름을 입력해주세요.</string>
    <string name="chall_warn_enter_password">비밀번호를 입력해주세요.</string>
    <string name="chall_warn_pw_under_8">비밀번호는 8자리 이상이어야 합니다.</string>
    <string name="chall_warn_pw_over_16">비밀번호는 16자리 이하여야 합니다.</string>
    <string name="chall_warn_pw_regex">영문, 숫자, 특수문자 혼합 8~16자</string>
    <string name="chall_warn_verify_not_same">비밀번호가 일치하지 않습니다.</string>
    <string name="아이디">아이디</string>
    <string name="signin_ui_enter_id">아이디를 입력하세요.</string>
    <string name="비밀번호">비밀번호</string>
    <string name="signin_ui_enter_password">비밀번호를 입력하세요.</string>
    <string name="로그인">로그인</string>
    <string name="회원가입">회원가입</string>
    <string name="종료">종료</string>
    <string name="이름">이름</string>
    <string name="signup_ui_enter_name">이름을 입력하세요.</string>
    <string name="이메일">이메일</string>
    <string name="비밀번호_확인">비밀번호 확인</string>
    <string name="chall_ui_enter_email">이메일을 입력하세요.</string>
    <string name="비밀번호를_한_번_더_입력하세요_">비밀번호를 한 번 더 입력하세요.</string>
</resources>