<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/iv_signUp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/tv_up_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/이름"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_signUp" />

    <EditText
        android:id="@+id/et_up_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/signup_ui_enter_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_up_name" />

    <TextView
        android:id="@+id/tv_up_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/아이디"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_up_name" />

    <EditText
        android:id="@+id/et_up_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/signin_ui_enter_id"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_up_id" />

    <TextView
        android:id="@+id/tv_up_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/비밀번호"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_up_id" />

    <EditText
        android:id="@+id/et_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/signin_ui_enter_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tv_up_password" />

    <Button
        android:id="@+id/btn_up_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/회원가입"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/et_up_password" />

</androidx.constraintlayout.widget.ConstraintLayout>